--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rslearn"
+name = "pensiv"
 version = "0.0.1"
 authors = ["Arthur Lafrance <lafrancearthur@gmail.com>"]
 edition = "2018"
