--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "rslearn"
+name = "pensiv"
 version = "0.0.1"
 authors = ["Arthur Lafrance <lafrancearthur@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+ndarray = "0.13.1"
+num-traits = "0.2"
